fix(oit): fix big of searchdropdown misalignment
- added wrapper around search input and dropdown mount point
- altered SCSS
- this addresses both food A and food B

--- a/sass/shortcodes/_oit_calculator.scss
+++ b/sass/shortcodes/_oit_calculator.scss
@@ -363,6 +363,13 @@
     margin-bottom: 1rem;
     display: flex;
     gap: 0.5rem;
+    align-items: flex-start;
+  }
+
+  .search-input-wrapper {
+    position: relative;
+    flex-grow: 1;
+    width: 100%;
   }
 
   .search-input {
